kqed_dev4/src/objects/Convio_Product_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Convio_Product_Order__c</fullName>
        <label>Convio Product Order</label>
        <referenceTo>Convio_Product_Order__c</referenceTo>
        <relationshipLabel>Convio Product Order Items</relationshipLabel>
        <relationshipName>Convio_Product_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convio_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Convio Transaction ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Internal_Name__c</fullName>
        <label>Product Internal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Option_Value__c</fullName>
        <label>Product Option Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Option__c</fullName>
        <label>Product Option</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Apartment_Number__c</fullName>
        <label>Ship To Apartment Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Extra_Line__c</fullName>
        <label>Ship To Extra Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_First_Name__c</fullName>
        <label>Ship To First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Last_Name__c</fullName>
        <label>Ship To Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Name__c</fullName>
        <label>Ship To Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Number__c</fullName>
        <label>Ship To Street Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Code__c</fullName>
        <label>Ship To Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Convio Product Order Item</label>
    <nameField>
        <label>Convio Product Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Convio Product Order Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>